--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   geolocator: ^11.0.0
+  url_launcher: ^6.2.4
+  webview_flutter: ^4.5.0
+
+
 
 dev_dependencies:
   flutter_test:
