--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
 
+  # kakaomap api need these packages
+  http: ^1.1.0
+  geolocator: ^11.0.0
+  webview_flutter: ^4.5.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
