--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.1.0
   geolocator: ^11.0.0
   webview_flutter: ^4.5.0
+  kakao_map_plugin: ^0.3.0
 
 dev_dependencies:
   flutter_test:
