--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
       sdk: flutter
   widget_spinning_wheel: ^0.0.5
+  shared_preferences: ^2.0.15
+  flutter_typeahead: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
