조건에 맞는 음식 없을 때 메세지

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/images/fats.png
     - assets/foods/
     - assets/roulette.png
+    - assets/crying_cat.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
